# gym-nutrition-tracker

./: .gitignore  LICENSE  README.md  app.py  blueprint.md  pyproject.toml  requirements.txt  spec.md
data/: Swiss_food_composition_database.xlsx
notebooks/: data_exploration.ipynb
src/: __init__.py  api_client.py  models.py  utils.py
src/ml/: __init__.py  data_processor.py  recommendation_engine.py
tests/: __init__.py  fixtures.py  test_api_client.py  test_data_processor.py  test_ml.py  test_recommendation_engine.py  test_utils.py
