[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-nutrition-tracker"
version = "0.1.0"
description = "A web application for tracking nutrition and macros using Swiss Food Composition Database"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Swiss Gym Nutrition Tracker Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "streamlit",
    "pandas",
    "openpyxl",
    "scikit-learn",
    "requests",
    "plotly",
    "numpy",
    "matplotlib",
    "seaborn",
    "scipy",
    "fuzzywuzzy",
    "python-Levenshtein",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "requests-mock",
    "jupyter",
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/yourusername/swiss-gym-nutrition-tracker"
Documentation = "https://github.com/yourusername/swiss-gym-nutrition-tracker#readme"
Repository = "https://github.com/yourusername/swiss-gym-nutrition-tracker"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

